--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,14 +1,72 @@
 
-nav.theme-dark, nav.theme-dark ul.links-wrapper.active { background-color: #0f172a }
 
-header.theme-dark   { background-color: #0f172a }
+nav.theme-dark, nav.theme-dark ul.links-wrapper.active { background-color: #5D0001 }
 
-header.theme-dark  h1 { color: var(--sky-400); }
+header.theme-dark   { background-color: #080D10
+}
 
-section.theme-dark   { background-color: #0f172a }
+header.theme-dark  h1 { color:#B08D57; }
 
-footer.theme-dark   { background-color: #0f172a }
+section.theme-dark   { background-color:#5D0001}
 
+footer.theme-dark   { background-color:#080D10
+}
+footer.theme-dark > h2 {
+    color: #B08D57
+}
 
 
 header .col-text h2, .col-1 > h3 { line-height: 1.8 }
+header.theme-dark .badge {
+    color:#0D1015 ;
+    background-color: #B08D57;
+}
+.theme-dark .col-1 h3.in-col-1, .theme-dark .col-1 h3 {
+    color: #E5DEDC;
+}
+.theme-dark h2 {
+    color: #B08D57;
+}
+header.theme-dark h2 {
+    color:#E5DEDC;
+}
+footer.theme-dark > h3 {
+    color: #E5DEDC;
+}
+ .theme-dark p {
+    color: #E5DEDC;
+}
+.theme-dark h3 {
+    color: #B08D57;
+}
+.theme-dark a:not(.btn):link, .theme-dark a:not(.btn):visited {
+    color: #B08D57;
+}
+footer.theme-dark ul.footer-links li a:link, footer.theme-dark ul.footer-links li a:visited {
+    color: #B08D57;
+    text-decoration-color: #E5DEDC;
+}
+.theme-dark .btn-solid:link, .theme-dark .btn-solid:visited {
+    color: #000;
+    background-color: #B08D57;
+    border-color: #000;
+}
+.theme-dark .btn-outline:link, .theme-dark .btn-outline:visited {
+    color: #B08D57;
+    background-color: transparent;
+    border-color: #B08D57;
+}
+nav.theme-dark ul.links-wrapper li a:link, nav.theme-dark ul.links-wrapper li a:visited {
+    color: #E5DEDC;
+}
+nav.theme-dark ul.links-wrapper li a.btn-solid:link, nav.theme-dark ul.links-wrapper li a.btn-solid:visited {
+    color: #000;
+    border: solid 2px #000;
+    background-color: #B08D57;
+}
+body {
+    font-family: 'rye', sans-serif;
+}
+h1, h2, h3 {
+    font-weight: bold;
+}
