--- a/portfolio/js/assets/css/css-javascript.css
+++ b/portfolio/js/assets/css/css-javascript.css
@@ -36,7 +36,7 @@ header.hero-block-js .hero-text-container h1 {
     font-weight: bold;
 }
 
-header.hero-block-js .hero-text-container h1 span { color: var(--gray-700); font-weight: bold; }
+header.hero-block-js .hero-text-container h1 span { color: #E5DEDC; font-weight: bold; }
 
 header.hero-block-js .hero-text-container h2 {
     font-size: calc(20px + (28 - 20) * ((100vw - 320px) / (1920 - 320)));
@@ -82,4 +82,8 @@ header.hero-block-js .hero-text-container img {
     flex-direction: column;
     overflow: hidden;
     justify-content: space-between;
+}
+.theme-js .col-4:has(p:empty) {
+    border: none;
+    background-color: transparent;
 }
