--- a/portfolio/js/assets/css/javascript-projects.css
+++ b/portfolio/js/assets/css/javascript-projects.css
@@ -1,19 +1,19 @@
-.container-menu.menu-desktop { background-color: var(--gray-800) }
-.container-menu.menu-mobile { background-color: var(--gray-800) }
-.container-menu.menu-mobile ul.mobile-display { background-color: var(--gray-800) }
-.container-menu a:link { font-weight: 600 !important; color: var(--white-000) } 
-.container-menu a:visited { font-weight: 600 !important; color: var(--gray-200) }
+.container-menu.menu-desktop { background-color: #5D0001 }
+.container-menu.menu-mobile { background-color: #5D0001 }
+.container-menu.menu-mobile ul.mobile-display { background-color: #5D0001 }
+.container-menu a:link { font-weight: 400 !important; color: var(--white-000) } 
+.container-menu a:visited { font-weight: 400 !important; color: var(--gray-200) }
 .container-menu a#btn-cta:link,
-.container-menu a#btn-cta:visited { color: var(--white-000); font-weight: 600 }
+.container-menu a#btn-cta:visited { color: #0D1015; font-weight: 400 }
 .container-menu .item-icon .bar1,.container-menu .item-icon .bar2,.container-menu .item-icon .bar3 { background-color: var(--white-000) }
 .container-menu a#btn-cta:link,
-.container-menu a#btn-cta:visited { background-color: var(--blue-500) }
+.container-menu a#btn-cta:visited { background-color: #B08D57; }
 .container-menu a#btn-cta:focus,
 .container-menu a#btn-cta:hover,
-.container-menu a#btn-cta:active { background-color: var(--blue-400) }
+.container-menu a#btn-cta:active { background-color: #E5DEDC }
 .container-menu a#btn-cta:focus,
 .container-menu a#btn-cta:hover,
-.container-menu a#btn-cta:active { border-color: var(--blue-400) }
+.container-menu a#btn-cta:active { border-color: #E5DEDC }
 
 header.hero-block-js { 
     min-height: 200px !important;
@@ -29,7 +29,7 @@ header.hero-block-js .hero-text-container h1 {
     letter-spacing: -1px; 
 }
 
-header.hero-block-js .hero-text-container h1 span { color: var(--gray-700); font-weight: 600; }
+header.hero-block-js .hero-text-container h1 span { color:  #E5DEDC;; font-weight: 600; }
 
 header.hero-block-js .hero-text-container h2 {
     font-size: calc(20px + (28 - 20) * ((100vw - 320px) / (1920 - 320)));
